bench/results/v0.11.0/summary.md
# Boring CMS benchmark v0.11.0

Run: 2026-09-09T18:02:50.610Z on Linux 7.1.10-200.fc44.x86_64, AMD Ryzen 5 5600X 6-Core Processor (12 cores host).
Constraints and methodology: see bench/README.md. Read it before comparing numbers; the CPU pinning, memory caps, rate limit override, and client placement all shape these results.

## Throughput (ops/s) by phase

| Phase | bun-1cpu | bun-2cpu | bun-4cpu | deno-1cpu | deno-2cpu | deno-4cpu | node-1cpu | node-2cpu | node-4cpu |
| --- | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: |
| schema_apply | 776.3 | 748.8 | 794 | 519.2 | 760.9 | 774.4 | 628.7 | 688.3 | 638.7 |
| schema_read | 1908 | 2007.7 | 1908.7 | 1768 | 1880.8 | 1999.1 | 1895.1 | 2041.3 | 1984.4 |
| create_short | 1157.3 | 1134.5 | 1189.7 | 993.6 | 1048.2 | 1061.7 | 966.3 | 1060.7 | 946.4 |
| create_long | 1026.6 | 1029.7 | 1029.3 | 777.4 | 841.8 | 875.6 | 821.4 | 885 | 793.4 |
| batch_create_short_x200 | 35 | 42.4 | 43.4 | 31.6 | 31.5 | 32.6 | 38.9 | 40.1 | 34.6 |
| read_list_short | 2075.4 | 2091.9 | 2352.5 | 1945.1 | 1926 | 1901.8 | 1940.4 | 1995.6 | 1897.1 |
| read_list_long | 580.6 | 581.3 | 620.4 | 676.1 | 566.5 | 616.5 | 536.1 | 562.3 | 522 |
| read_single_short | 2850.3 | 3074.6 | 3158.8 | 2671.8 | 2782.8 | 2818.7 | 2814.3 | 2996.6 | 2722.5 |
| read_single_long | 2200.3 | 2446.2 | 2540.7 | 2453.7 | 2524.9 | 2497.4 | 2496.4 | 2177.7 | 2145.9 |
| read_304_etag | 2689.5 | 3067.3 | 3554.1 | 3350.9 | 3669.4 | 3605.3 | 3859.3 | 3807.4 | 2619.6 |
| update_then_read | 809.8 | 889.6 | 907.3 | 737.2 | 811.6 | 777.5 | 822.5 | 788.8 | 690.3 |
| media_upload_64kb | 954.7 | 906.8 | 971.2 | 408.8 | 541.3 | 576.7 | 785.2 | 842.4 | 1059.7 |
| media_serve_64kb | 1522.1 | 1583.9 | 1762.3 | 1334.7 | 1433.2 | 1583.4 | 1289.8 | 1463.3 | 1493.7 |
| media_reupload | 800 | 993.8 | 1192.5 | 885.4 | 734.5 | 653.9 | 947.4 | 1048.1 | 744.9 |
| media_delete | 1963.3 | 1994.9 | 2079.6 | 1738.7 | 1700.7 | 1624.1 | 2026.8 | 2071.8 | 1942.3 |
| link_access | 2913.1 | 3423.2 | 3131.6 | 3051.2 | 2482.1 | 3140.8 | 3215.3 | 3134.2 | 2777.2 |
| read_concurrent_20 | 5513.6 | 5782 | 5962.7 | 4359.5 | 5228.7 | 5119.5 | 4787.4 | 4341.1 | 4903.3 |
| write_concurrent_10 | 2050.6 | 2236.7 | 2475.4 | 2493.5 | 2413.7 | 2314.2 | 2288 | 2474.3 | 2319 |
| delete_entries | 1813.4 | 1850.8 | 1939.4 | 1730.7 | 1699.1 | 1727.6 | 1669.9 | 1716 | 1625.6 |

## Latency p50 / p95 (ms) by phase

| Phase | bun-1cpu | bun-2cpu | bun-4cpu | deno-1cpu | deno-2cpu | deno-4cpu | node-1cpu | node-2cpu | node-4cpu |
| --- | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: |
| schema_apply | 1.04 / 2.37 | 1.13 / 2.43 | 1.03 / 2.51 | 1.59 / 4.11 | 1.07 / 2.39 | 1.06 / 2.15 | 1.57 / 2.41 | 1.14 / 2.29 | 1.32 / 3 |
| schema_read | 0.41 / 0.96 | 0.48 / 0.91 | 0.48 / 1.04 | 0.47 / 1.29 | 0.48 / 0.98 | 0.46 / 0.98 | 0.46 / 0.9 | 0.46 / 0.88 | 0.47 / 0.84 |
| create_short | 0.77 / 1.48 | 0.82 / 1.34 | 0.8 / 1.13 | 0.94 / 1.35 | 0.93 / 1.15 | 0.91 / 1.12 | 0.95 / 1.42 | 0.87 / 1.17 | 1.01 / 1.37 |
| create_long | 0.88 / 1.48 | 0.91 / 1.42 | 0.91 / 1.43 | 1.03 / 2.14 | 0.97 / 1.7 | 0.98 / 1.46 | 0.98 / 2.23 | 0.97 / 1.59 | 1.14 / 1.76 |
| batch_create_short_x200 | 28.69 / 29.06 | 24.43 / 24.45 | 23.36 / 25.02 | 31.46 / 32.13 | 32.6 / 34.85 | 30.79 / 30.95 | 25.04 / 29.78 | 23.43 / 28.15 | 24.73 / 37.88 |
| read_list_short | 0.42 / 0.8 | 0.44 / 0.64 | 0.39 / 0.58 | 0.49 / 0.67 | 0.5 / 0.59 | 0.49 / 0.61 | 0.45 / 0.72 | 0.45 / 0.68 | 0.46 / 0.62 |
| read_list_long | 1.51 / 2.83 | 1.45 / 2.77 | 1.42 / 2.11 | 1.3 / 1.89 | 1.29 / 5.18 | 1.27 / 2.12 | 1.69 / 2.47 | 1.72 / 2.11 | 1.71 / 2.39 |
| read_single_short | 0.29 / 0.63 | 0.31 / 0.42 | 0.3 / 0.39 | 0.35 / 0.45 | 0.35 / 0.4 | 0.34 / 0.41 | 0.31 / 0.47 | 0.31 / 0.41 | 0.34 / 0.44 |
| read_single_long | 0.34 / 0.61 | 0.34 / 0.53 | 0.33 / 0.53 | 0.36 / 0.51 | 0.36 / 0.46 | 0.35 / 0.46 | 0.34 / 0.52 | 0.35 / 0.5 | 0.39 / 0.62 |
| read_304_etag | 0.27 / 0.85 | 0.29 / 0.46 | 0.26 / 0.33 | 0.27 / 0.36 | 0.27 / 0.32 | 0.27 / 0.33 | 0.24 / 0.31 | 0.24 / 0.3 | 0.34 / 0.49 |
| update_then_read | 1.09 / 2.05 | 1.06 / 1.41 | 1.04 / 1.48 | 1.24 / 2.08 | 1.16 / 1.45 | 1.24 / 1.51 | 1.11 / 2.16 | 1.15 / 1.5 | 1.24 / 2.43 |
| media_upload_64kb | 0.93 / 1.63 | 0.95 / 1.75 | 0.88 / 1.48 | 1.03 / 5.6 | 1.15 / 4.38 | 1.08 / 4.11 | 0.88 / 1.31 | 0.89 / 1.52 | 0.88 / 1.02 |
| media_serve_64kb | 0.57 / 1.13 | 0.56 / 1.08 | 0.51 / 0.76 | 0.54 / 1.44 | 0.58 / 0.86 | 0.57 / 0.75 | 0.56 / 1.42 | 0.53 / 1.01 | 0.55 / 0.9 |
| media_reupload | 1.06 / 1.81 | 0.92 / 1.42 | 0.8 / 1.17 | 1.04 / 1.32 | 1.02 / 1.4 | 1.27 / 2.72 | 0.87 / 2.13 | 0.88 / 1.12 | 0.94 / 1.46 |
| media_delete | 0.44 / 0.96 | 0.45 / 0.63 | 0.45 / 0.61 | 0.51 / 0.72 | 0.52 / 0.69 | 0.6 / 0.73 | 0.45 / 0.66 | 0.45 / 0.56 | 0.51 / 0.58 |
| link_access | 0.3 / 0.54 | 0.27 / 0.4 | 0.31 / 0.4 | 0.31 / 0.38 | 0.35 / 0.47 | 0.31 / 0.38 | 0.3 / 0.36 | 0.31 / 0.35 | 0.35 / 0.43 |
| read_concurrent_20 | 3.05 / 6.12 | 2.96 / 5.98 | 2.9 / 5.82 | 3.73 / 8.27 | 3.72 / 4.13 | 3.81 / 4.24 | 3.52 / 7.21 | 3.8 / 7.67 | 3.36 / 6.89 |
| write_concurrent_10 | 3.76 / 8.03 | 3.34 / 7.23 | 3 / 6.86 | 3.75 / 5.55 | 3.89 / 5.5 | 4.08 / 5.83 | 3.34 / 7 | 3.09 / 6.79 | 3.26 / 6.87 |
| delete_entries | 0.51 / 0.77 | 0.51 / 0.71 | 0.49 / 0.7 | 0.54 / 0.68 | 0.57 / 0.7 | 0.57 / 0.66 | 0.56 / 0.64 | 0.53 / 0.67 | 0.59 / 0.72 |

## Run metadata

| Run | Runtime | vCPUs | Peak RSS (MB) | Wall (s) |
| --- | --- | ---: | ---: | ---: |
| bun-1cpu | bun 1.4.2 | 1 | 95 | 2 |
| bun-2cpu | bun 1.4.2 | 2 | 98 | 2 |
| bun-4cpu | bun 1.4.2 | 4 | 104 | 2 |
| deno-1cpu | deno 2.9.6 | 1 | 168 | 2 |
| deno-2cpu | deno 2.9.6 | 2 | 130 | 2 |
| deno-4cpu | deno 2.9.6 | 4 | 131 | 2 |
| node-1cpu | v24.13.1 | 1 | 142 | 2 |
| node-2cpu | v24.13.1 | 2 | 144 | 2 |
| node-4cpu | v24.13.1 | 4 | 142 | 2 |
