bench/results/v0.18.0/summary.md
# Boring CMS benchmark v0.18.0

Run: 2026-09-11T20:02:07.951Z on Linux 7.1.10-200.fc44.x86_64, AMD Ryzen 5 5600X 6-Core Processor (12 cores host).
Constraints and methodology: see bench/README.md. Read it before comparing numbers; the CPU pinning, memory caps, rate limit override, and client placement all shape these results.

## Throughput (ops/s) by phase

| Phase | bun-1cpu | bun-2cpu | bun-4cpu | deno-1cpu | deno-2cpu | deno-4cpu | node-1cpu | node-2cpu | node-4cpu |
| --- | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: |
| schema_apply | 726.9 | 786.2 | 729.4 | 589.8 | 672.8 | 287.6 | 575.1 | 730.3 | 669.8 |
| schema_read | 1648.5 | 1915.9 | 2021 | 1689.9 | 2082.1 | 825.3 | 1882.1 | 2022.9 | 1920.5 |
| create_short | 1124.1 | 1174.5 | 1168.7 | 807.1 | 1015.2 | 603.1 | 1001.6 | 1020.8 | 1013.2 |
| create_long | 734.3 | 741.5 | 817.4 | 652.7 | 692.2 | 394.9 | 659.5 | 706.5 | 693.6 |
| create_short_restcall | 1472.8 | 1366.9 | 1513.9 | 1355.1 | 1395 | 1067.5 | 1427.8 | 1398.5 | 1261.3 |
| batch_create_short_x200 | 38.8 | 40 | 41.3 | 28.7 | 28.6 | 20.9 | 38.5 | 40 | 34.4 |
| read_list_short | 1688.2 | 1764.6 | 1763.6 | 1653.6 | 1514.5 | 1322.7 | 1569.6 | 1535.7 | 1463.8 |
| read_list_long | 575.7 | 590.5 | 558.6 | 547.4 | 527.6 | 555.2 | 402.7 | 383 | 396.1 |
| read_single_short | 3181.1 | 3344.1 | 3247.1 | 3212.1 | 2481.8 | 2960.6 | 2986.4 | 3039.6 | 2918.7 |
| read_single_long | 1784.4 | 2134.3 | 2201.8 | 2065.2 | 1041.6 | 1911.4 | 2201.9 | 2079.3 | 1975.3 |
| read_304_etag | 3179.8 | 3907.2 | 3781.9 | 3564.4 | 2093.3 | 3415.2 | 3753.2 | 3856.2 | 3586 |
| update_then_read | 910.2 | 907.2 | 874.7 | 844.9 | 572.1 | 737.2 | 876 | 874.4 | 796.2 |
| rewrite_dry_1pair | 214 | 245 | 223.3 | 189 | 144.5 | 207.5 | 199.9 | 203.2 | 196.9 |
| rewrite_dry_200pairs | 119.1 | 137.1 | 132.1 | 121 | 91.1 | 134.7 | 123.1 | 126.3 | 122 |
| rewrite_live_200pairs | 63.3 | 74.7 | 75.6 | 88.9 | 58 | 101.1 | 105.2 | 88.8 | 75.3 |
| media_upload_64kb | 963.5 | 865.5 | 887.4 | 531.2 | 324.9 | 542.3 | 928.8 | 775.6 | 980.1 |
| media_serve_64kb | 1624.9 | 1477.5 | 1676.9 | 1454.1 | 1020.6 | 1231.5 | 1359.8 | 1462.4 | 1643.5 |
| media_reupload | 946.1 | 963 | 1011.6 | 586 | 545.5 | 535.2 | 631 | 981 | 807.2 |
| media_delete | 1870.7 | 1785 | 1864.4 | 1672.2 | 849.8 | 1585.8 | 1808.6 | 1980.7 | 1854.5 |
| link_access | 3269.8 | 3261.8 | 3006.1 | 2980.7 | 2337.9 | 2169.5 | 2788.5 | 3062.8 | 2869.9 |
| read_concurrent_20 | 5002.8 | 4468.9 | 5274.4 | 4229 | 4042.4 | 3542.3 | 4143.3 | 4248.4 | 4094.8 |
| write_concurrent_10 | 2208.4 | 2233.8 | 2126.3 | 2212.3 | 2155.4 | 2253.9 | 2360.7 | 2233.8 | 2358.1 |
| delete_entries | 1783.9 | 1788.9 | 1213.4 | 1679.8 | 1461.4 | 1466.6 | 1540.7 | 1756 | 1783.9 |

## Latency p50 / p95 (ms) by phase

| Phase | bun-1cpu | bun-2cpu | bun-4cpu | deno-1cpu | deno-2cpu | deno-4cpu | node-1cpu | node-2cpu | node-4cpu |
| --- | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: | ---: |
| schema_apply | 1.1 / 2.87 | 1.07 / 2.8 | 1.14 / 2.87 | 1.6 / 2.78 | 1.41 / 2.69 | 2.76 / 6.6 | 1.34 / 4.59 | 1.22 / 2.48 | 1.2 / 3.19 |
| schema_read | 0.49 / 1.35 | 0.46 / 0.95 | 0.44 / 0.95 | 0.53 / 1.03 | 0.43 / 0.88 | 0.93 / 2.91 | 0.47 / 0.93 | 0.46 / 0.84 | 0.48 / 0.87 |
| create_short | 0.79 / 1.63 | 0.78 / 1.13 | 0.8 / 1.11 | 1.01 / 1.72 | 0.93 / 1.23 | 1.47 / 2.56 | 0.9 / 1.38 | 0.92 / 1.24 | 0.93 / 1.25 |
| create_long | 1.2 / 2.18 | 1.24 / 2.1 | 1.1 / 1.97 | 1.3 / 2.27 | 1.27 / 2.47 | 2.15 / 4.65 | 1.28 / 2.65 | 1.28 / 1.88 | 1.27 / 2.32 |
| create_short_restcall | 0.61 / 0.97 | 0.67 / 1.04 | 0.61 / 0.84 | 0.67 / 1.03 | 0.68 / 0.81 | 0.92 / 1.25 | 0.62 / 0.99 | 0.65 / 0.91 | 0.73 / 1 |
| batch_create_short_x200 | 25.75 / 27.52 | 24.03 / 27.95 | 24.41 / 25.9 | 34.57 / 36.51 | 34.94 / 35.43 | 48.24 / 52.34 | 24.12 / 30.81 | 22.51 / 30.16 | 27.31 / 34.8 |
| read_list_short | 0.5 / 1.03 | 0.53 / 0.79 | 0.52 / 0.81 | 0.58 / 0.77 | 0.63 / 0.83 | 0.71 / 1.12 | 0.56 / 0.86 | 0.58 / 0.76 | 0.59 / 0.89 |
| read_list_long | 1.46 / 4.08 | 1.48 / 3.54 | 1.5 / 3.21 | 1.33 / 2.71 | 1.43 / 2.4 | 1.39 / 2.14 | 2.39 / 2.79 | 2.5 / 2.96 | 2.37 / 3.17 |
| read_single_short | 0.27 / 0.47 | 0.28 / 0.41 | 0.29 / 0.43 | 0.31 / 0.34 | 0.35 / 0.64 | 0.33 / 0.41 | 0.29 / 0.37 | 0.31 / 0.37 | 0.32 / 0.43 |
| read_single_long | 0.42 / 1.41 | 0.44 / 0.64 | 0.42 / 0.62 | 0.44 / 0.62 | 0.83 / 1.74 | 0.5 / 0.68 | 0.43 / 0.58 | 0.45 / 0.6 | 0.48 / 0.67 |
| read_304_etag | 0.24 / 0.41 | 0.24 / 0.37 | 0.25 / 0.32 | 0.25 / 0.32 | 0.45 / 0.71 | 0.28 / 0.36 | 0.25 / 0.29 | 0.24 / 0.31 | 0.26 / 0.33 |
| update_then_read | 0.98 / 1.64 | 1.03 / 1.52 | 1.08 / 1.36 | 1.12 / 1.42 | 1.59 / 2.63 | 1.25 / 1.9 | 1.05 / 1.39 | 1.07 / 1.31 | 1.15 / 1.56 |
| rewrite_dry_1pair | 4.67 / 4.67 | 4.08 / 4.08 | 4.48 / 4.48 | 5.29 / 5.29 | 6.92 / 6.92 | 4.82 / 4.82 | 5 / 5 | 4.92 / 4.92 | 5.08 / 5.08 |
| rewrite_dry_200pairs | 8.39 / 8.39 | 7.29 / 7.29 | 7.57 / 7.57 | 8.26 / 8.26 | 10.98 / 10.98 | 7.42 / 7.42 | 8.12 / 8.12 | 7.92 / 7.92 | 8.2 / 8.2 |
| rewrite_live_200pairs | 15.79 / 15.79 | 13.38 / 13.38 | 13.22 / 13.22 | 11.24 / 11.24 | 17.25 / 17.25 | 9.89 / 9.89 | 9.51 / 9.51 | 11.26 / 11.26 | 13.28 / 13.28 |
| media_upload_64kb | 0.86 / 1.88 | 1.01 / 1.9 | 1.01 / 1.66 | 1.01 / 5.23 | 1.69 / 5.68 | 1.08 / 6.38 | 0.87 / 2.14 | 0.91 / 2.9 | 0.89 / 1.24 |
| media_serve_64kb | 0.5 / 1.26 | 0.55 / 1.24 | 0.51 / 1.02 | 0.52 / 1.12 | 0.75 / 1.97 | 0.63 / 2.02 | 0.48 / 1.29 | 0.53 / 0.86 | 0.48 / 0.86 |
| media_reupload | 0.87 / 1.65 | 0.84 / 1.38 | 0.82 / 2.1 | 1.07 / 2.54 | 1.34 / 4.18 | 1.44 / 4.98 | 0.87 / 1.48 | 0.91 / 1.07 | 0.97 / 2.18 |
| media_delete | 0.44 / 1.02 | 0.46 / 1.18 | 0.48 / 0.73 | 0.5 / 0.78 | 0.83 / 3.13 | 0.57 / 0.87 | 0.45 / 1.01 | 0.49 / 0.61 | 0.51 / 0.62 |
| link_access | 0.28 / 0.47 | 0.29 / 0.39 | 0.31 / 0.51 | 0.32 / 0.41 | 0.38 / 0.55 | 0.43 / 0.6 | 0.31 / 0.63 | 0.32 / 0.38 | 0.34 / 0.43 |
| read_concurrent_20 | 3.22 / 6.89 | 3.84 / 7.63 | 3 / 6.28 | 4.28 / 5.82 | 4.37 / 7 | 5.35 / 6.69 | 3.45 / 8.12 | 3.57 / 7.54 | 3.62 / 7.91 |
| write_concurrent_10 | 3.25 / 7.57 | 3.31 / 7.27 | 3.62 / 7.67 | 4.14 / 6.48 | 4.33 / 6.66 | 4.05 / 6.59 | 3.25 / 7.23 | 3.44 / 7.46 | 3.29 / 7.1 |
| delete_entries | 0.5 / 0.94 | 0.53 / 0.75 | 0.73 / 1.4 | 0.56 / 0.67 | 0.64 / 0.82 | 0.66 / 0.84 | 0.55 / 1.04 | 0.54 / 0.64 | 0.54 / 0.6 |

## Run metadata

| Run | Runtime | vCPUs | Peak RSS (MB) | Wall (s) |
| --- | --- | ---: | ---: | ---: |
| bun-1cpu | bun 1.4.2 | 1 | 103 | 2 |
| bun-2cpu | bun 1.4.2 | 2 | 108 | 2 |
| bun-4cpu | bun 1.4.2 | 4 | 104 | 2 |
| deno-1cpu | deno 2.9.6 | 1 | 164 | 2 |
| deno-2cpu | deno 2.9.6 | 2 | 159 | 3 |
| deno-4cpu | deno 2.9.6 | 4 | 159 | 3 |
| node-1cpu | v24.13.1 | 1 | 140 | 2 |
| node-2cpu | v24.13.1 | 2 | 140 | 2 |
| node-4cpu | v24.13.1 | 4 | 141 | 2 |
